# ocarina-cards-3d

./: .gitignore  README.md  pyproject.toml
output/12H_AltoC/: A.stl  A_high.stl  A_sharp.stl  A_sharp_high.stl  B.stl  B_high.stl  C.stl  C_high.stl  C_sharp.stl  C_sharp_high.stl  D.stl  D_high.stl  D_sharp.stl  D_sharp_high.stl  E.stl  E_high.stl  F.stl  F_high.stl  F_sharp.stl  G.stl  G_sharp.stl  base.stl
scripts/: generate_cheat_sheet.py  interactive_mapper.py  mapper.scad
src/: data.py  generator.py  main.py  mapping.json
templates/: card.scad
